--- a/contents/configch.yml
+++ b/contents/configch.yml
@@ -1,5 +1,5 @@
-title: Shijuan Huang's Homepage
-page-top-title: Shijuan Huang
-top-section-bg-text: Computer Science
-home-subtitle: Shijuan Huang&ensp;|&ensp;黄士娟
-copyright-text: '&copy; Shijuan Huang 2023-2027. All Rights Reserved.'
+title: 黄士娟的主页
+page-top-title: 黄士娟
+top-section-bg-text: 计算机科学与技术
+home-subtitle: 黄士娟
+copyright-text: '&copy; 黄士娟 2023-2027。 保留所有权利。'
